--- a/Source/templates/new_analyse.html
+++ b/Source/templates/new_analyse.html
@@ -15,6 +15,12 @@
             <div id="statistics_text" class="row statistics-div col-5 normal-margin">
                 0 functions on 0 runs : 0 tests
             </div>
+            <div id="main_alert" class="alert alert-warning alert-dismissible fade show" role="alert" hidden="hidden">
+                <strong id="main_dissmisable_alert_text"></strong>
+                <button type="button" class="close" data-hide="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
             <button id="run_setup_button" class="btn btn-primary normal-margin run-button">
                 Run
             </button>
@@ -100,6 +106,12 @@
                             <label for="list_name" class="form-label mt-2 ml-2">List Name:&nbsp;&nbsp;</label>
                             <input id="list_name" type="text" class="form-control mr-2 mb-2 col-6" placeholder="list name">
                             <button id="save_list_button" class="fas-button"><i class="far fa-save" data-toggle="tooltip" data-placement="right" title="save list"></i></button>
+                        </div>
+                        <div id="save_list_alert" class="alert alert-warning alert-dismissible fade show" role="alert" hidden="hidden">
+                            <strong id="save_list_dissmisable_text"></strong>
+                            <button type="button" class="close" data-hide="alert" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
                         </div>
                         <h6><span id="num_of_runs" class="badge badge-secondary mt-2">Total: 0 Runs</span></h6>
 
