--- a/Source/templates/new_analyse.html
+++ b/Source/templates/new_analyse.html
@@ -177,10 +177,11 @@
                 <div class="row">
                     <div id="drill_down_meta" class="col-6">
                         <div class="card">
-                            <div class="card-header">
-                                <h2 id="drill_down_meta_header">
+                            <div id="drill_down_header" class="card-header row">
+                                <h2>
                                     Results for task id:
                                 </h2>
+                                <h3 id="drill_down_meta_header" class="ml-2"></h3>
                             </div>
                             <div class="card-body">
                                 <div class="card text-dark bg-light mb-3">
@@ -190,11 +191,15 @@
                                     <div class="card-body">
                                         <div class="row">
                                             <h4>Test Status :</h4>
-                                            <h5 id="test_status">Success</h5>
+                                            <h5 id="test_status"></h5>
+                                        </div>
+                                        <div class="row">
+                                            <h4>Result Text :</h4>
+                                            <h5 id="result_text"></h5>
                                         </div>
                                         <div class="row">
                                             <h4>Time Elapsed :</h4>
-                                            <h5 id="time_elapsed">0.05sec</h5>
+                                            <h5 id="time_elapsed"></h5>
                                         </div>
                                     </div>
                                 </div>
@@ -205,15 +210,15 @@
                                     <div class="card-body">
                                         <div class="row">
                                             <h4>Function Name :</h4>
-                                            <h5 id="function_name">bbb_skajhdkj_3231_gggddg_wuyiwuy</h5>
+                                            <h5 id="function_name"></h5>
                                         </div>
                                         <div class="row">
                                             <h4>State :</h4>
-                                            <h5 id="function_state">InDev</h5>
+                                            <h5 id="function_state"></h5>
                                         </div>
                                         <div class="row">
                                             <h4>Owner :</h4>
-                                            <h5 id="function_owner">DvirH</h5>
+                                            <h5 id="function_owner"></h5>
                                         </div>
                                     </div>
                                 </div>
@@ -224,15 +229,15 @@
                                     <div class="card-body">
                                         <div class="row">
                                             <h4>DB :</h4>
-                                            <h5 id="db_name">oracle 12121</h4>
+                                            <h5 id="db_name"></h5>
                                         </div>
                                         <div class="row">
                                             <h4>Run ID :</h4>
-                                            <h5 id="run_id">121212</h5>
+                                            <h5 id="run_id"></h5>
                                         </div>
                                         <div class="row">
                                             <h4>Scenario :</h4>
-                                            <h5 id="scenario_name">wow so cool</h5>
+                                            <h5 id="scenario_name"></h5>
                                         </div>
 
                                     </div>
@@ -246,6 +251,9 @@
                         <table id="drill_down_table" class="table table-striped table-bordered">
 
                         </table>
+                    </div>
+                    <div id="no_array_div" class="col-6 flex-center">
+                        No Array
                     </div>
                 </div>
             </div>
