added permissions - phase1

--- a/Source/templates/define_func.html
+++ b/Source/templates/define_func.html
@@ -2,11 +2,8 @@
 <link rel="stylesheet" href="../static/css/run_stage_definition.css">
 <link rel="stylesheet" href="{{url_for('static',filename='css/fontawesome/css/all.css')}}" />
 <link rel="stylesheet" href="../static/css/draggable_list.css">
-<link href="../static/css/bootstrap-toggle.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../static/css/metadata_layout.css" />
+<!-- <link rel="stylesheet" href="../static/css/metadata_layout.css" /> -->
 <link rel="stylesheet" href="../static/css/define_func.css" />
-<link rel="stylesheet" href="../static/css/bootstrap-toggle.min.css">
-<script src="../static/js/bootstrap-toggle.min.js"></script>
 <link rel="stylesheet" href="../static/css/Function_Definition_Modal.css" />
 
 <!-- <link rel="stylesheet" href="../static/css/styles.css" /> -->
