--- a/Source/templates/infras.html
+++ b/Source/templates/infras.html
@@ -2,8 +2,11 @@
 <link rel="stylesheet" href="{{url_for('static',filename='css/fontawesome/css/all.css')}}" />
 <link rel="stylesheet" href="../static/css/toggles.css" />
 <link rel="stylesheet" href="../static/css/infras.css" />
-<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet"> {% block main_form_css %} {% endblock %}
-<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+<!-- <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet"> {% block main_form_css %} {% endblock %}
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script> -->
+<link href="../static/css/bootstrap-toggle.min.css" rel="stylesheet">
+
+<script src="../static/js/bootstrap-toggle.min.js"></script>
 {% endblock %} {%block content%}
 
 
