--- a/Source/templates/define_func.html
+++ b/Source/templates/define_func.html
@@ -186,6 +186,9 @@
                         <button id="Duplicate_Group"><i class="far fa-file-alt adapt-icon-size"></i></button>
                         <button id="Delete_Group"><i class="far fa-trash-alt adapt-icon-size"></i></button>
                         <button id="Edit_Group"><i class="fa fa-pencil-alt adapt-icon-size"></i></button>
+                        
+                        <button id="Permission_Group"><span class="badge badge-success">open</span><i class="fas fa-unlock"></i></button>
+
 
                         <div id="modal_alert" class="alert alert-warning alert-dismissible fade show modal_alert_class" role="alert" hidden="hidden">
                             <strong id="main_dissmisable_modal_alert_text"></strong>
