--- a/Source/static/css/Function_Definition_Modal.css
+++ b/Source/static/css/Function_Definition_Modal.css
@@ -198,6 +198,28 @@
   margin-right: 2px;
 }
 
+#Permission_Group{
+    margin-top: auto;
+    margin-right: 16px;
+    margin-left: auto;
+}
+
+#Permission_Group i{
+    font-size: 1.3rem;
+    margin-bottom: 5px;
+}
+
+span.badge{
+    height: auto;
+    width: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    /* margin-left: auto; */
+    margin-right: 10px;
+    font-size: 1.1rem;
+    font-weight: 400;
+}
+
 .modal_main_data{
     padding-top: 5px;
     padding-bottom: 15px;
