kind and type Parameter define  function

--- a/Source/templates/define_func.html
+++ b/Source/templates/define_func.html
@@ -45,7 +45,7 @@
 
                     <div class="function-input-row col-3">
                         <label>Kind</label>
-                        <select class="form-control" type="text" name="kind">
+                        <select id = "function_kind" class="form-control" type="text" name="kind" >
                             <option value="Python">Python</option>
                             <option value="Matlab">Matlab</option>
                             <option value="Sql">Sql</option>
