--- a/Source/static/css/infras.css
+++ b/Source/static/css/infras.css
@@ -1,31 +1,30 @@
-
-.main_form{
+.main_form {
     padding: 20px 0;
 }
 
-.layout-buttons-div{
+.layout-buttons-div {
     margin-bottom: 20px;
 }
 
-.normal-size{
+.normal-size {
     font-size: 2.5rem;
     margin-left: 20px;
     color: black;
 }
 
-.adapt-icon-size{
+.adapt-icon-size {
     font-size: 2.2rem;
     margin-left: 20px;
     color: black;
     margin-top: 2px;
 }
 
-.main_form{
+.main_form {
     background-color: whitesmoke;
     /* width: 73%; */
     margin-left: auto;
     background-clip: border-box;
-    border: 2px solid rgba(0,0,0,.125);
+    border: 2px solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
     margin-bottom: 40px;
 }
@@ -34,36 +33,36 @@ span.toggle-handle.btn.btn-default {
     background-color: whitesmoke;
 }
 
-hr{
+hr {
     width: 70%;
     height: 5px;
     background-color: whitesmoke;
     border-style: dashed;
     border-color: gray;
-    box-sizing: 10px 0 0 0 ;
+    box-sizing: 10px 0 0 0;
     margin: 50px auto;
 }
 
-.form-inline{
+.form-inline {
     margin-left: 40px;
     margin-top: 20px;
 }
 
-.medium-margin{
+.medium-margin {
     margin-left: 20px;
 }
 
-#output-dir{
+#output-dir {
     width: 40%;
 }
 
-.layout-buttons-div{
+.layout-buttons-div {
     margin-left: 40px;
     margin-top: 20px;
 }
 
-.seperator{
-margin-top: 20px;
+.seperator {
+    margin-top: 20px;
     /* margin-bottom: 20px; */
     display: block;
     margin-left: auto;
@@ -71,32 +70,35 @@ margin-top: 20px;
     color: chocolate;
 }
 
-.seperators-div{
-margin-top: 100px;
-width: 50px;
+.seperators-div {
+    margin-top: 100px;
+    width: 50px;
 }
 
-.project-label{
+.project-label {
     width: 160px;
 }
 
-.site-data-div .first-column h3{
+.site-data-div .first-column h3 {
     width: 140px;
 }
 
-.site-data-div .first-column h5{
-    width: 140px;
+.site-data-div .first-column h5 {
+    FONT-WEIGHT: 200;
+    FONT-WEIGHT: 200;
+    width: 180px;
+    /* width: 140px; */
 }
 
-.site-data-div .second-column h3{
+.site-data-div .second-column h3 {
     width: 180px;
 }
 
-.site-data-div .second-column h5{
-    width: 180px;
+.site-data-div .second-column h5 {
+    width: 130px;
 }
 
-.site-data-div .second-column input[type=text]{
+.site-data-div .second-column input[type=text] {
     width: 120px;
 }
 
