--- a/Source/templates/infras.html
+++ b/Source/templates/infras.html
@@ -18,7 +18,7 @@
     </div>
     <div class="form-inline">
         <label for="project_select" class="project-label"><h3>Project</h3></label>
-        <input name="" id="project_select" class="form-control medium-margin input-medium-size">
+        <input name="" id="project_select" class="form-control medium-margin ">
     </div>
     <div class="form-inline">
         <label for="output-dir" class="project-label"><h5>Output directory:</h5></label>
@@ -33,91 +33,115 @@
         <button id="Duplicate_Site"><i class="far fa-file-alt adapt-icon-size"></i></button>
         <button id="Delete_Site"><i class="far fa-trash-alt adapt-icon-size"></i></button>
     </div>
-    <div class="row site-data-div">
-        <div class="col-5 mb-auto first-column">
-            <div class="form-inline">
-                <label for="site_select"><h3>Site</h3></label>
-                <input id="site_select" class="form-control medium-margin input-medium-size">
-                <div class="form-check-inline medium-margin">
-                    <input type="checkbox" class="form-check-input" id="is_site_active_cb">
-                    <label class="form-check-label align-form-label mt-2" for="is_site_active_cb"><h6>Is Active</h6></label>
+
+    <div class="form-inline">
+        <label for="site_select" class="project-label"><h3>Site</h3></label>
+        <input name="" id="site_select" class="form-control medium-margin ">
+        <div class="form-check-inline medium-margin">
+            <input type="checkbox" class="form-check-input" id="is_site_active_cb">
+            <label class="form-check-label align-form-label mt-2" for="is_site_active_cb"><h6>Is Active</h6></label>
+        </div>
+    </div>
+
+
+    <div class="row mb-auto site-data-div">
+        <div class="col-10 mb-auto first-column">
+
+            <div class="row site-data-div">
+                <div class="col-5 mb-auto first-column">
+                    <div class="form-inline">
+                        <label for="Site_Conn_Schema"><h5>Site Connection</h5></label>
+                        <!-- <input type="text" id="auto_data_IP" class="form-control medium-margin"> -->
+                        <select id="Site_Conn_Schema" class="form-control medium-margin" type="text">
+                            <option value="Tamnon1">Tamnon1</option>
+                            <option value="Tamnon2">Tamnon2</option>
+                            <option value="Tamnon3">Tamnon3</option>
+                            <option value="Tamnon4">Tamnon4</option>
+                        </select>
+                    </div>
+
+                    <div class="form-inline">
+                        <label for="excersice_Conn_Schema"><h5>Excersice Connection</h5></label>
+                        <!-- <input type="text" id="auto_data_IP" class="form-control medium-margin"> -->
+                        <select id="excersice_Conn_Schema" class="form-control medium-margin" type="text">
+                            <option value="Tamnon1">Tamnon1</option>
+                            <option value="Tamnon2">Tamnon2</option>
+                            <option value="Tamnon3">Tamnon3</option>
+                            <option value="Tamnon4">Tamnon4</option>
+                        </select>
+                    </div>
+
+                    <div class="form-inline">
+                        <label for="Octoups_Conn_Schema"><h5>Octoups Connection</h5></label>
+                        <!-- <input type="text" id="auto_data_IP" class="form-control medium-margin"> -->
+                        <select id="Octoups_Conn_Schema" class="form-control medium-margin" type="text">
+                            <option value="Tamnon1">Tamnon1</option>
+                            <option value="Tamnon2">Tamnon2</option>
+                            <option value="Tamnon3">Tamnon3</option>
+                            <option value="Tamnon4">Tamnon4</option>
+                        </select>
+                    </div>
                 </div>
-            </div>
-            <div class="form-inline">
-                <label for="site_ip"><h5>Site IP</h5></label>
-                <input type="text" id="site_ip" class="form-control medium-margin">
-            </div>
-            <div class="form-inline">
-                <label for="excersice_ip"><h5>Excersice IP</h5></label>
-                <input type="text" id="excersice_site_ip" class="form-control medium-margin">
-            </div>
-            <div class="form-inline">
-                <label for="auto_data_IP"><h5>Auto data IP</h5></label>
-                <input type="text" id="auto_data_IP" class="form-control medium-margin">
+
+                <div class="seperators-div">
+                    <i class="fas fa-circle seperator"></i>
+                    <i class="fas fa-circle seperator"></i>
+                    <i class="fas fa-circle seperator"></i>
+                </div>
+
+                <div class="col-5 mb-auto second-column">
+                    <div class="form-inline">
+                        <label for="recording_db"><h5>Recording DB</h5></label>
+                        <select id="recording_db" class="form-control medium-margin" type="text">
+                            <option value="Record_DB1">Record_DB1</option>
+                            <option value="Record_DB2">Record_DB2</option>
+                            <option value="Record_DB3">Record_DB3</option>
+                            <option value="Record_DB4">Record_DB4</option>
+                        </select>
+                        <button id="check_Recording_DB" class="medium-margin"><i class="far fa-check-square"></i></button>
+                    </div>
+                    <div class="form-inline">
+                        <label for="excersice_db"><h5>Excersice DB</h5></label>
+                        <select id="excersice_db" class="form-control medium-margin" type="text">
+                            <option value="Excersice_DB1">Excersice_DB1</option>
+                            <option value="Excersice_DB2">Excersice_DB2</option>
+                            <option value="Excersice_DB3">Excersice_DB3</option>
+                            <option value="Excersice_DB4">Excersice_DB4</option>
+                        </select>
+                        <button id="check_excersice_db" class="medium-margin"><i class="far fa-check-square"></i></button>
+                    </div>
+                    <div class="form-inline">
+                        <label for="octoups_db"><h5>Octoups DB</h5> </ label>
+                            <select id="octoups_db" class="form-control medium-margin" type="text">
+                                <option value="Octoups_DB1">Octoups_DB1</option>
+                                <option value="Octoups_DB2">Octoups_DB2</option>
+                                <option value="Octoups_DB3">Octoups_DB3</option>
+                                <option value="Octoups_DB4">Octoups_DB4</option>
+                            </select> 
+                        <button id="check_Octoups_DB" class="medium-margin"><i class="far fa-check-square"></i></button>
+                    </div>
+                </div>
+
             </div>
             <div class="form-inline">
                 <label for="nets"><h5>Nets</h5></label>
-                <input type="text" id="nets" class="form-control medium-margin">
-            </div>
-            <div class="form-inline">
-                <label for="stations"><h5>Stations</h5></label>
-                <input type="text" id="stations" class="form-control medium-margin">
-            </div>
-        </div>
-        <div class="seperators-div">
-            <i class="fas fa-circle seperator"></i>
-            <i class="fas fa-circle seperator"></i>
-            <i class="fas fa-circle seperator"></i>
-        </div>
-        <div class="col-6 mb-auto second-column">
-            <div class="form-inline">
-                <label for="version_input"><h5>Version</h5></label>
-                <input type="text" id="version_input" class="form-control medium-margin">
-            </div>
-            <div class="form-inline">
-                <label for="recording_db_ip"><h5>Recording DB IP</h5></label>
-                <input type="text" id="recording_db_ip" class="form-control medium-margin">
+                        <input type="text" id="nets" class="form-control medium-margin">
+                    </div>
+                    <div class="form-inline">
+                        <label for="stations"><h5>Stations</h5></label>
+                        <input type="text" id="stations" class="form-control medium-margin">
+                    </div>
 
-                <!-- <select name="" id="recording_db_ip" class="form-control medium-margin input-medium-size">
-                    <option value="Site1">IP1</option>
-                    <option value="Site2">IP2</option>
-                    <option value="Site3">IP3</option>
-                </select> -->
-                <!-- <a href="" class="medium-margin" role="button"><i class="far fa-edit"></i></a> -->
-                <button id="check_Recording_DB_IP" class="medium-margin"><i class="far fa-check-square"></i></button>
-            </div>
-            <div class="form-inline">
-                <label for="excersice_db_ip"><h5>Excersice DB IP</h5></label>
-                <input type="text" id="excersice_db_ip" class="form-control medium-margin">
-
-                <!-- <select name="" id="excersice_db_ip" class="form-control medium-margin input-medium-size">
-                    <option value="Site1">IP1</option>
-                    <option value="Site2">IP2</option>
-                    <option value="Site3">IP3</option>
-                </select>
-                <a href="" class="medium-margin" role="button"><i class="far fa-edit"></i></a> -->
-                <button id="check_excersice_db_ip" class="medium-margin"><i class="far fa-check-square"></i></button>
-            </div>
-            <div class="form-inline">
-
-                <label for="auto_run_DB_IP"><h5>Auto run DB IP</h5> </ label>
-               <input type="text" id="auto_run_DB_IP" class="form-control medium-margin">
-
-                <!-- <select name="" id="auto_run_DB_IP" class="form-control medium-margin input-medium-size">
-                    <option value="Site1"> IP1 </ option>
-                    <option value="Site2"> IP2 </ option>
-                    <option value="Site3"> IP3 </ option>
-                </ select>
-                <a href="" class="medium-margin" role="button"><i class="far fa-edit"></i></a> -->
-                <button id="check_Auto_Run_DB_IP" class="medium-margin"><i class="far fa-check-square"></i></button>
+                    <div class="form-inline">
+                        <label for="version_input"><h5>Version</h5></label>
+                        <input type="text" id="version_input" class="form-control medium-margin">
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-{% endblock %}
-{%block scripts%}
+        {% endblock %} {%block scripts%}
 
-<script src="../static/js/OctoUtils.js"></script>
-<script src="../static/js/infras.js"></script>
+        <script src="../static/js/OctoUtils.js"></script>
+        <script src="../static/js/infras.js"></script>
 
-{% endblock %}
+        {% endblock %}
